# 24_Econmy

./: .gitignore  BL_model_app.py  CAPM_app.py  README.md  app.py  financial_statement_app.py  pyproject.toml  shiny_test.ipynb  shiny_test_app.py  stock_data.csv  stock_price_app.py
invest_zemi/: CAPM.py  CAPM_app.py  EdinetcodeDlInfo.csv  FundcodeDlInfo.csv  black-litterman_model.py  dead_cross.py  golden_cross.py  invest_allocation.py  overall_risk.py  risk.py  shiny_test.ipynb  stock_graph.ipynb
invest_zemi/ignored_folder/: financial_statement_data.csv  stock_price_data.csv
